src/main/kotlin/com/example/ggyunispring/error/member/InvalidJwtTokenException.kt
package com.example.ggyunispring.error.member

class InvalidJwtTokenException: RuntimeException() {
}